--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
 	function writeurl()
 	{
-		var sc1=document.getElementById("scramble").value.replace(/ /g,'_').replace(/\n/g.'_\\n_');
+		var sc1=document.getElementById("scramble").value.replace(/ /g,'_').replace(/\n/g,'_\\n_');
 		var so1=document.getElementById("solution").value.replace(/ /g,'_').replace(/\n/g,'_\\n_');
 		document.getElementById("url").innerHTML="xmdi.github.io/index.html?sc="+sc1+"&so="+so1;
 	}
