--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			else if (pair[0]=="so")
 			{
 				var so0=searchParams.get('so').replace(/_/g," ");
-				so0=so0.replace(/\\n/g,"\n");
+				so0=so0.replace(/\^n /g,"\n");
 				document.getElementById("solution").innerHTML=so0;
 			}
 		}
@@ -314,8 +314,8 @@
 
 	function writeurl()
 	{
-		var sc1=document.getElementById("scramble").value.replace(/ /g,'_').replace(/\\n/g,'_\n_');
-		var so1=document.getElementById("solution").value.replace(/ /g,'_').replace(/\\n/g,'_\n_');
+		var sc1=document.getElementById("scramble").value.replace(/\n/g,'_^n_').replace(/ /g,'_')
+		var so1=document.getElementById("solution").value.replace(/\n/g,'_^n_').replace(/ /g,'_')
 		document.getElementById("url").innerHTML="xmdi.github.io/index.html?sc="+sc1+"&so="+so1;
 	}
 
