--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 	{
 		var sc1=document.getElementById("scramble").value.replace(/\n/g,'_^n_').replace(/ /g,'_')
 		var so1=document.getElementById("solution").value.replace(/\n/g,'_^n_').replace(/ /g,'_')
-		document.getElementById("url").innerHTML="xmdi.github.io/index.html?sc="+sc1+"&so="+so1;
+		document.getElementById("url").innerHTML="http://xmdi.github.io?sc="+sc1+"&so="+so1;
 	}
 
 
